samples/_failures_safe/1761729464_8ba167_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fad21e73.c: In function ‘main’:
./samples/SAFE/__tmp_fad21e73.c:152:5: error: expected declaration or statement at end of input
  152 |     print_matrix(&mat2);
      |     ^~~~~~~~~~~~
